Add different image sizes

--- a/index.html
+++ b/index.html
@@ -37,9 +37,34 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid relative bg">
-      <div class="unit xs-0 m-1">
+    <section class="grid relative">
+      <div class="unit xs-1 m-0">
+        <div class="embed embed-2by3">
+          <img class="embed-item img-flex" src="images/3-puppies-small.jpg" alt="" aria-details="3-brown-puppies">
+          <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
+            <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
+            <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
+            <div class="gutter">
+              <a class="btn" href="adopt.html">Adopt a dog today</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="unit m-1 l-0">
+        <div class="embed embed-3by2">
+          <img class="embed-item img-flex" src="images/3-puppies-medium.jpg" alt="" aria-details="3-brown-puppies">
+          <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
+            <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
+            <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
+            <div class="gutter">
+              <a class="btn" href="adopt.html">Adopt a dog today</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="unit m-0 l-1">
         <div class="embed embed-24by10">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
           <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
             <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
             <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
@@ -52,13 +77,13 @@
     </section>
 
     <section class="grid gutter-2">
-      <div class="unit xs-1 m-1-2 gutter pad-t">
+      <div class="unit xs-1 m-1 l-1-2 gutter pad-t">
         <h3 class="push-1-2">About Us</h3>
         <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity that was founded in Ottawa in February 2015. We are an all-breed, all-sized foster based rescue that operates out of Ottawa and the surroundings.</p>
         <p class="push-1-2">Our goal here is to rescue homeless and abandoned dogs. This includes from shelters and surrenders from owners who cannot keep their dogs any longer.</p>
         <p class="push-1-2">We work with volunteers, foster homes, local veterinarians, and trainers. This allows us to rescue dogs in need and give them a temporary home until they can find one to call forever.</p>
       </div>
-      <div class="unit l-1-2 island">
+      <div class="unit m-1 l-1-2 island">
         <div class="embed embed-4by3">
           <img class="embed-item img-flex" src="images/people-with-puppy.jpg" alt="" aria-details="people-with-a-puppy">
         </div>
