--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
-      <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li>
-          <a class="gutter" href="index.html">
+      <ul class="grid list-group-inline text-center pad-t-1-2 push-1-2 wrapper">
+        <li class="unit xs-1 m-1-4 island-1-4">
+          <a href="index.html">
             <i class="icon i-32 push-r-1-4">
               <svg><use xlink:href="images/icons.svg#puppy"></use></svg>
             </i>
             <span class="inline icon-text">Freedom Dog Rescue</span>
           </a>
         </li>
-        <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
-        <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
+        <li class="unit xs-1-2 m-1-2 island-1-4"><a href="rescues.html">Available Rescues</a></li>
+        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </nav>
   </header>
@@ -41,57 +41,43 @@
       <div class="unit xs-1 m-0">
         <div class="embed embed-2by3">
           <img class="embed-item img-flex" src="images/3-puppies-small.jpg" alt="" aria-details="3-brown-puppies">
-          <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
-            <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
-            <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
-            <div class="gutter">
-              <a class="btn" href="adopt.html">Adopt a dog today</a>
-            </div>
-          </div>
         </div>
       </div>
       <div class="unit m-1 l-0">
         <div class="embed embed-3by2">
           <img class="embed-item img-flex" src="images/3-puppies-medium.jpg" alt="" aria-details="3-brown-puppies">
-          <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
-            <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
-            <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
-            <div class="gutter">
-              <a class="btn" href="adopt.html">Adopt a dog today</a>
-            </div>
-          </div>
         </div>
       </div>
       <div class="unit m-0 l-1">
         <div class="embed embed-24by10">
           <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
-          <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
-            <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
-            <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
-            <div class="gutter">
-              <a class="btn" href="adopt.html">Adopt a dog today</a>
-            </div>
-          </div>
+        </div>
+      </div>
+      <div class="unit xs-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
+        <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
+        <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
+        <div class="gutter">
+          <a class="btn" href="adopt.html">Adopt a dog today</a>
         </div>
       </div>
     </section>
 
-    <section class="grid gutter-2">
-      <div class="unit xs-1 m-1 l-1-2 gutter pad-t">
+    <section class="grid gutter wrapper">
+      <div class="unit xs-1 m-1 l-1-2 island pad-t">
         <h3 class="push-1-2">About Us</h3>
         <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity that was founded in Ottawa in February 2015. We are an all-breed, all-sized foster based rescue that operates out of Ottawa and the surroundings.</p>
         <p class="push-1-2">Our goal here is to rescue homeless and abandoned dogs. This includes from shelters and surrenders from owners who cannot keep their dogs any longer.</p>
         <p class="push-1-2">We work with volunteers, foster homes, local veterinarians, and trainers. This allows us to rescue dogs in need and give them a temporary home until they can find one to call forever.</p>
       </div>
-      <div class="unit m-1 l-1-2 island">
+      <div class="unit xs-1 l-1-2 island">
         <div class="embed embed-4by3">
           <img class="embed-item img-flex" src="images/people-with-puppy.jpg" alt="" aria-details="people-with-a-puppy">
         </div>
       </div>
     </section>
 
-    <section>
-      <ul class="list-group grid push-0 cards gutter-2">
+    <section class="cards">
+      <ul class="list-group grid push-0 gutter wrapper">
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
@@ -117,7 +103,7 @@
               <h3 class="gutter white">Adoption Process</h3>
             </div>
             <div class="unit xs-1">
-              <p>The adoption process can be stressful. There are probably plenty of questions swirling around and we're here to help make the process as smooth and stress-free as it can be. We want you and your future dog to be happy together and the best first step is through our process.</p>
+              <p>The adoption process can be stressful. There are probably many questions swirling around and we're here to help make the process as smooth and stress-free as it can be. We want you and your future dog to be happy together and the best first step starts here.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">More info</a>
@@ -127,8 +113,8 @@
       </ul>
     </section>
 
-    <section class="grid gutter-2">
-      <div class="unit xs-1 m-1-2 gutter pad-t">
+    <section class="grid gutter wrapper">
+      <div class="unit xs-1 m-1-2 island pad-t">
         <h3 class="push-1-2">Contact Us</h3>
         <dl class="push-1-4">
           <dt class="bold">Adoptions</dt>
@@ -151,11 +137,17 @@
     </section>
   </main>
 
-  <footer role="contentinfo" class="grid gutter-2">
+  <footer role="contentinfo" class="grid gutter">
     <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit xs-1 m-1-2 micro pad-t-1-2 text-right">
+    <div class="unit xs-1 m-0 micro pad-t-1-2 text-center">
+      <ul class="list-group-inline gutter push-1-2">
+        <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
+        <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
+      </ul>
+    </div>
+    <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
