--- a/rescues.html
+++ b/rescues.html
@@ -20,32 +20,32 @@
   </ul>
 
   <header role="banner" class="grid">
-    <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
-      <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li>
-          <a class="gutter" href="index.html">
+    <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
+      <ul class="grid list-group-inline text-center pad-t-1-2 push-1-2 wrapper">
+        <li class="unit xs-1 m-1-4 island-1-4">
+          <a href="index.html">
             <i class="icon i-32 push-r-1-4">
               <svg><use xlink:href="images/icons.svg#puppy"></use></svg>
             </i>
             <span class="inline icon-text">Freedom Dog Rescue</span>
           </a>
         </li>
-        <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
-        <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
+        <li class="unit xs-1-2 m-1-2 island-1-4"><a href="rescues.html">Available Rescues</a></li>
+        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid gutter-2">
+    <section class="grid gutter wrapper">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Available Rescues</h1>
         <p class="push-1-2">These are all the dogs that are currently available for adoption. All the dogs have a name and will have a description on their personality to help you figure out if the dog is a good match for you. Please keep in mind their personality or breed traits as they can strongly sway how well the dog will thrive in your home.</p>
       </div>
     </section>
 
-    <section class="gutter-2">
-      <ul class="list-group grid push-0">
+    <section class="gutter">
+      <ul class="list-group grid push-0 wrapper">
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
@@ -206,11 +206,17 @@
     </section>
   </main>
 
-  <footer role="contentinfo" class="grid gutter-2">
+  <footer role="contentinfo" class="grid gutter">
     <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit xs-1 m-1-2 micro pad-t-1-2 text-right">
+    <div class="unit xs-1 m-0 micro pad-t-1-2 text-center">
+      <ul class="list-group-inline gutter push-1-2">
+        <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
+        <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
+      </ul>
+    </div>
+    <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
