--- a/adopt.html
+++ b/adopt.html
@@ -49,14 +49,22 @@
           <li>If the meeting is a success and everyone in the household is in agreement to adopt the dog then you will sign the adoption agreement and pay the adoption fee. These fees allow us to help other dogs.</li>
         </ol>
       </div>
-      <div class="unit gutter pad-t">
+      <div class="unit xs-1 text-center gutter">
+        <a class="btn" href="rescues.html">Check out our pups!</a>
+      </div>
+      <div class="unit xs-1 m-1-2 gutter pad-t">
         <h2 class="push-1-2">Adoption Fee</h2>
-        <p class="push-1-2">All our dogs have adoption fees based on their age. These adoption fees help us cover the cost of taking care of other dogs which includes feeding, medicating, and housing them. It's necessary in order for us to continue our rescue work. None of this money goes towards anything besides the dogs.</p>
+        <p class="push-1-2">All our dogs have adoption fees based on their age. These adoption fees help us cover the cost of taking care of other dogs which includes feeding, medicating, and housing them.</p>
         <ol class="gutter-2">
           <li>Under two years old: $500</li>
           <li>Two to seven years old: $400</li>
           <li>Over eight years old: $300</li>
         </ol>
+      </div>
+      <div class="unit xs-1 m-1-2 pad-t island">
+        <div class="embed embed-4by3">
+          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="" aria-details="3-brown-puppies">
+        </div>
       </div>
     </section>
     <section class="gutter wrapper">
@@ -67,8 +75,8 @@
             <h3 class="mega push-1-2">About You</h3>
           </div>
           <div class="unit xs-1 push-1-2 gutter">
-            <label for="subject">Dog of Interest</label>
-            <select id="subject" name="_subject">
+            <label for="dog">Dog of Interest</label>
+            <select id="dog" name="dog">
               <option>Ellie</option>
               <option>Honey</option>
               <option>Bolt</option>
@@ -79,23 +87,23 @@
           </div>
           <div class="unit xs-1 m-3-4 push-1-2 gutter">
             <label for="name">Full Name</label>
-            <input id="name" placeholder="Full Name" name="name" required>
+            <input id="name" placeholder="Full Name" name="name" aria-details="full-name" required>
           </div>
           <div class="unit xs-1 m-1-4 push-1-2 gutter">
             <label for="age">Age</label>
-            <input id="age" placeholder="Age" name="age" required>
+            <input id="age" placeholder="Age" name="age" aria-details="age" required>
           </div>
           <div class="unit xs-1 m-3-4 push-1-2 gutter">
             <label for="address">Address</label>
-            <input id="address" placeholder="Address" name="address" required>
+            <input id="address" placeholder="Address" name="address" aria-details="address" required>
           </div>
           <div class="unit xs-1 m-1-4 push-1-2 gutter">
             <label for="city">City</label>
-            <input id="city" placeholder="City" name="city" required>
+            <input id="city" placeholder="City" name="city" aria-details="city" required>
           </div>
           <div class="unit xs-1 m-3-4 push-1-2 gutter">
-            <label for="subject">Province</label>
-            <select id="subject" name="_subject">
+            <label for="province">Province</label>
+            <select id="province" name="province">
               <option>Ontario</option>
               <option>Alberta</option>
               <option>British Columbia</option>
@@ -113,27 +121,27 @@
           </div>
           <div class="unit xs-1 m-1-4 push-1-2 gutter">
             <label for="postal">Postal Code</label>
-            <input id="postal" placeholder="Postal Code" name="postal" required>
+            <input id="postal" placeholder="Postal Code" name="postal" aria-details="postal-code" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="email">Email</label>
-            <input id="email" type="email" placeholder="Email" name="email" required>
+            <input id="email" type="email" placeholder="Email" name="email" aria-details="email" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="tel">Phone Number</label>
-            <input id="tel" type="tel" placeholder="Phone Number" name="tel" required>
+            <input id="tel" type="tel" placeholder="Phone Number" name="tel" aria-details="phone-number" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="occupation">Occupation</label>
-            <input id="occupation" placeholder="Occupation" name="occupation" required>
+            <input id="occupation" placeholder="Occupation" name="occupation" aria-details="occupation" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
-            <label for="tel">Work Number</label>
-            <input id="tel" type="tel" placeholder="Work Number" name="tel" required>
+            <label for="tel-work">Work Number</label>
+            <input id="tel-work" type="tel" placeholder="Work Number" name="tel-work" aria-details="work-number" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
-            <label for="subject">Do you live in a:</label>
-            <select id="subject" name="_subject">
+            <label for="home">Do you live in a:</label>
+            <select id="home" name="home">
               <option>House</option>
               <option>Townhouse</option>
               <option>Condo</option>
@@ -143,10 +151,8 @@
             </select>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
-            <div class="grid">
-              <div class="unit xs-1">
-                <p class="push-0">Do you:</p>
-              </div>
+            <fieldset class="grid">
+              <legend class="unit xs-1 not-bold">Do you:</legend>
               <div class="unit xs-1 m-1-4 push-1-4">
                 <input type="radio" id="own" name="housing">
                 <label for="own">Own</label>
@@ -159,11 +165,11 @@
                 <input type="radio" id="parents" name="housing">
                 <label for="parents">With Parents</label>
               </div>
-            </div>
+            </fieldset>
           </div>
           <div class="unit xs-1 push-1-2 gutter">
             <label for="renting">If renting (indicate your landlord's contact infomation):</label>
-            <input id="renting" placeholder="Indicate your landlord's contact information" name="renting">
+            <input id="renting" placeholder="Indicate your landlord's contact info" name="renting" aria-details="landlord-infomation">
           </div>
           <div class="unit xs-1 text-center pad-t gutter">
             <button class="btn gutter-2 push-2" type="submit">Submit Application</button>
