Fix the labels and wording

--- a/adopt.html
+++ b/adopt.html
@@ -87,19 +87,19 @@
           </div>
           <div class="unit xs-1 m-3-4 push-1-2 gutter">
             <label for="name">Full Name</label>
-            <input id="name" placeholder="Full Name" name="name" aria-details="full-name" required>
+            <input id="name" placeholder="Full Name" name="name" aria-label="full-name" required>
           </div>
           <div class="unit xs-1 m-1-4 push-1-2 gutter">
             <label for="age">Age</label>
-            <input id="age" placeholder="Age" name="age" aria-details="age" required>
+            <input id="age" placeholder="Age" name="age" aria-label="age" required>
           </div>
           <div class="unit xs-1 m-3-4 push-1-2 gutter">
             <label for="address">Address</label>
-            <input id="address" placeholder="Address" name="address" aria-details="address" required>
+            <input id="address" placeholder="Address" name="address" aria-label="address" required>
           </div>
           <div class="unit xs-1 m-1-4 push-1-2 gutter">
             <label for="city">City</label>
-            <input id="city" placeholder="City" name="city" aria-details="city" required>
+            <input id="city" placeholder="City" name="city" aria-label="city" required>
           </div>
           <div class="unit xs-1 m-3-4 push-1-2 gutter">
             <label for="province">Province</label>
@@ -121,23 +121,23 @@
           </div>
           <div class="unit xs-1 m-1-4 push-1-2 gutter">
             <label for="postal">Postal Code</label>
-            <input id="postal" placeholder="Postal Code" name="postal" aria-details="postal-code" required>
+            <input id="postal" placeholder="Postal Code" name="postal" aria-label="postal-code" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="email">Email</label>
-            <input id="email" type="email" placeholder="Email" name="email" aria-details="email" required>
+            <input id="email" type="email" placeholder="Email" name="email" aria-label="email" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="tel">Phone Number</label>
-            <input id="tel" type="tel" placeholder="Phone Number" name="tel" aria-details="phone-number" required>
+            <input id="tel" type="tel" placeholder="Phone Number" name="tel" aria-label="phone-number" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="occupation">Occupation</label>
-            <input id="occupation" placeholder="Occupation" name="occupation" aria-details="occupation" required>
+            <input id="occupation" placeholder="Occupation" name="occupation" aria-label="occupation" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="tel-work">Work Number</label>
-            <input id="tel-work" type="tel" placeholder="Work Number" name="tel-work" aria-details="work-number" required>
+            <input id="tel-work" type="tel" placeholder="Work Number" name="tel-work" aria-label="work-number" required>
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="home">Do you live in a:</label>
@@ -163,13 +163,13 @@
               </div>
               <div class="unit xs-1 m-1-2 push-1-4">
                 <input type="radio" id="parents" name="housing">
-                <label for="parents">With Parents</label>
+                <label for="parents">Live with parents</label>
               </div>
             </fieldset>
           </div>
           <div class="unit xs-1 push-1-2 gutter">
             <label for="renting">If renting (indicate your landlord's contact infomation):</label>
-            <input id="renting" placeholder="Indicate your landlord's contact info" name="renting" aria-details="landlord-infomation">
+            <input id="renting" placeholder="Indicate your landlord's contact info" name="renting" aria-label="landlord-infomation">
           </div>
           <div class="unit xs-1 text-center pad-t gutter">
             <button class="btn gutter-2 push-2" type="submit">Submit Application</button>
