Change the required field

--- a/adopt.html
+++ b/adopt.html
@@ -137,7 +137,7 @@
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="tel-work">Work Number</label>
-            <input id="tel-work" type="tel" placeholder="Work Number" name="tel-work" aria-label="work-number" required>
+            <input id="tel-work" type="tel" placeholder="Work Number" name="tel-work" aria-label="work-number">
           </div>
           <div class="unit xs-1 m-1-2 push-1-2 gutter">
             <label for="home">Do you live in a:</label>
