Add another link to the navigation

--- a/rescues.html
+++ b/rescues.html
@@ -21,7 +21,7 @@
 
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
-      <ul class="grid list-group-inline text-center pad-t-1-2 push-1-2 wrapper">
+      <ul class="grid list-group-inline text-center pad-t-1-2 push-1-2">
         <li class="unit xs-1 m-1-4 island-1-4">
           <a href="index.html">
             <i class="icon i-32 push-r-1-4">
@@ -30,8 +30,9 @@
             <span class="inline icon-text">Freedom Dog Rescue</span>
           </a>
         </li>
-        <li class="unit xs-1-2 m-1-2 island-1-4"><a href="rescues.html">Available Rescues</a></li>
+        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="rescues.html">Available Rescues</a></li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="adopt.html">Adopt a Rescue</a></li>
+        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="#">Donations</a></li>
       </ul>
     </nav>
   </header>
@@ -219,7 +220,8 @@
     <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
-        <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="no-line push-1-2" href="#">Donations</a></li>
       </ul>
     </div>
   </footer>
