--- a/adopt.html
+++ b/adopt.html
@@ -187,7 +187,8 @@
     <div class="unit xs-1 m-0 micro pad-t-1-2 text-center">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
-        <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="no-line push-1-2" href="#">Donations</a></li>
       </ul>
     </div>
     <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
