Add the alt attributes to the images

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     <section class="grid relative">
       <div class="unit xs-1 m-0">
         <div class="embed embed-2by3">
-          <img class="embed-item img-flex" src="images/3-puppies-small.jpg" alt="" aria-details="3-brown-puppies">
+          <img class="embed-item img-flex" src="images/3-puppies-small.jpg" alt="3 brown puppies" aria-details="3-brown-puppies">
         </div>
       </div>
       <div class="unit m-1 l-0">
         <div class="embed embed-3by2">
-          <img class="embed-item img-flex" src="images/3-puppies-medium.jpg" alt="" aria-details="3-brown-puppies">
+          <img class="embed-item img-flex" src="images/3-puppies-medium.jpg" alt="3 brown puppies" aria-details="3-brown-puppies">
         </div>
       </div>
       <div class="unit m-0 l-1">
         <div class="embed embed-24by10">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="3 brown puppies" aria-details="3-brown-puppies">
         </div>
       </div>
       <div class="unit xs-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
@@ -72,7 +72,7 @@
       </div>
       <div class="unit xs-1 l-1-2 island">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/people-with-puppy.jpg" alt="" aria-details="people-with-a-puppy">
+          <img class="embed-item img-flex" src="images/people-with-puppy.jpg" alt="people with a puppy" aria-details="people-with-a-puppy">
         </div>
       </div>
     </section>
@@ -82,7 +82,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="" aria-details="black-sad-dog">
+              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="black dog" aria-details="black-sad-dog">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Available for Adoption</h3>
@@ -98,7 +98,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="" aria-details="dog-chewing-on-a-stick">
+              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="dog chewing a stick" aria-details="dog-chewing-on-a-stick">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Adoption Process</h3>
@@ -132,7 +132,7 @@
       </div>
       <div class="unit xs-1 m-1-2 island">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="" aria-details="3-brown-puppies">
+          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="brown puppy with a blanket" aria-details="puppy-with-blanket">
         </div>
       </div>
     </section>
